2001-07-18  Michael Lambert <michaellambert@email.com>

	* EnvironmentPermissionAccess.cs, FileIOPermissionAccess.cs, ReflectionPermissionFlag.cs: Add.