@@ -1,0 +1,15 @@
+//
+// System.Security.Permissions.IUnrestrictedPermission.cs
+//
+// Author:
+//   Nick Drochak(ndrochak@gol.com)
+//
+// (C) Nick Drochak
+//
+
+namespace System.Security.Permissions {
+
+	public interface IUnrestrictedPermission {
+		bool IsUnrestricted();
+	}
+}
