@@ -1,3 +1,7 @@
+2002-01-02  Nick Drochak  <ndrochak@gol.com>
+
+	* IUnrestrictedPermission.cs: Added missing interface class
+
 2001-07-18  Michael Lambert <michaellambert@email.com>
 
 	* EnvironmentPermissionAccess.cs, FileIOPermissionAccess.cs, ReflectionPermissionFlag.cs: Add.
